# Pont

./: .gitignore  LICENSE  README.md  pont.cabal
app/: Main.hs
docs/: KERNEL.md  VALIDATION.md
examples/: identity.pont
src/Kernel/: Check.hs  Context.hs  Conv.hs  Eval.hs  Kernel.hs  Quote.hs  Syntax.hs  Value.hs
test/: Exhaustive.hs  Main.hs  PathTests.hs  Properties.hs  Sigma.hs  Univalence.hs
